--- a/templates/src/pages/storykeep/login.astro
+++ b/templates/src/pages/storykeep/login.astro
@@ -146,7 +146,7 @@ const wordmark = `${brandBasePath}/wordmark.svg`;
                   </svg>
                 </div>
                 <div class="ml-3">
-                  <h3 class="text-sm font-medium text-green-800">
+                  <h3 class="text-sm font-bold text-green-800">
                     Login successful!
                   </h3>
                   <div class="mt-2 text-sm text-green-700">
