we got beliefsgit add --all

--- a/templates/src/components/Header.astro
+++ b/templates/src/components/Header.astro
@@ -129,7 +129,8 @@ const authStatus = {
 
       {/* StoryKeep Dashboard Icon */}
       {
-        slug !== `storykeep` && authStatus.isAdmin ? (
+        slug !== `storykeep` &&
+        (authStatus.isAdmin || authStatus.isAuthenticated) ? (
           <a
             href="/storykeep"
             class="hover:text-myblue hover:rotate-6"
