--- a/templates/src/layouts/Layout.astro
+++ b/templates/src/layouts/Layout.astro
@@ -69,7 +69,7 @@ const brandConfig = propBrandConfig || (await getBrandConfig(goBackend));
     />
     <meta name="description" content={description} />
     <meta name="generator" content={Astro.generator} />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/brand/favicon.ico" />
     <title>{title}</title>
 
     <!-- TractStack Styles -->
