--- a/templates/custom/with-examples/CodeHook.astro
+++ b/templates/custom/with-examples/CodeHook.astro
@@ -7,7 +7,7 @@ import FeaturedContent from '@/components/codehooks/FeaturedContent.astro';
 import ListContent from '@/components/codehooks/ListContent.astro';
 import BunnyVideoWrapper from '@/components/codehooks/BunnyVideoWrapper.astro';
 import EpinetWrapper from '@/components/codehooks/EpinetWrapper';
-import type { FullContentMapItem } from 'templates/src/types/tractstack';
+import type { FullContentMapItem } from '@/types/tractstack';
 
 export interface Props {
   target: string;
