--- a/templates/src/components/Footer.astro
+++ b/templates/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { preParseAction, lispLexer } from '../utils/actions';
+import { preParseAction, lispLexer } from '@/utils/actions';
 import type { MenuNode } from '@/types/tractstack';
 
 export interface Props {
