--- a/templates/custom/minimal/CodeHook.astro
+++ b/templates/custom/minimal/CodeHook.astro
@@ -6,7 +6,7 @@ import FeaturedContent from '@/components/codehooks/FeaturedContent.astro';
 import ListContent from '@/components/codehooks/ListContent.astro';
 import BunnyVideoWrapper from '@/components/codehooks/BunnyVideoWrapper.astro';
 import EpinetWrapper from '@/components/codehooks/EpinetWrapper';
-import type { FullContentMapItem } from 'templates/src/types/tractstack';
+import type { FullContentMapItem } from '@/types/tractstack';
 // import CustomHero from './CustomHero.astro';  // Uncomment to add custom components
 
 export interface Props {
