--- a/templates/src/components/Header.astro
+++ b/templates/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import Menu from './Menu';
-import { isAuthenticated, isAdmin, getUserRole } from '../utils/auth';
+import { isAuthenticated, isAdmin, getUserRole } from '@/utils/auth';
 import type { MenuNode } from '@/types/tractstack';
 
 export interface Props {
